<resources>
    <string name="app_name">MyAr</string>
    <string name="giris_ekran_konu">Giriş Ekranı İkonu</string>
    <string name="giris_ekrani">Giriş Ekranı</string>
    <string name="giris_kullanici_adi">Mail adresiniz</string>
    <string name="giris_sifre">Şifre</string>
    <string name="giris_yap_butonhint">Giriş Yap</string>
    <string name="giris_yapbuton">Giriş Yap</string>
    <string name="ya_da">Ya da</string>
    <string name="giris_kayit_ol">Kayıt Ol</string>
    <string name="kayit_ekran_ikon">Giriş Ekranı İkonu</string>
    <string name="kayit_ekrani">Kayıt Ekranı</string>
    <string name="kayit_isim">İsim</string>
    <string name="kayit_soyisim">Soyisim</string>
    <string name="kayit_mail_adresi">Mail adresi</string>
    <string name="kayit_sifre">Şifre</string>
    <string name="kayit_sifre_onay">Şifre Onayı</string>
    <string name="urunustmenu_geri">Product Details</string>
    <string name="urungeri_git">Geri git</string>
    <string name="urun_sayfa_baslik">Ürün Detayları</string>
    <string name="urun_geri_git">Geri git</string>
    <string name="main_urun_ekle">Ürün ekle</string>
    <string name="main_urunler_baslik">Ürünler</string>
    <string name="baslik_yeni_urun">Yeni Ürün Ekle</string>
    <string name="baslik_kaydet">Kaydet</string>
    <string name="baslik_temizle_buton">Temizle</string>
    <string name="yeni_urun_isim">Ürün ismi</string>
    <string name="yeni_urun_isim_baslik">Ürün İsmi</string>
    <string name="yeni_urun_aciklamasi">Ürün Açıklaması</string>
    <string name="yeni_urun_aciklama_baslik">Ürün Açıklaması</string>
    <string name="yeni_urun_eski_fiyat_baslik">Ürün Eski Fiyatı</string>
    <string name="yeni_urun_eski_fiyat">Ürün Eski Fiyat</string>
    <string name="yeni_urun_yeni_fiyat_baslik">Ürün Yeni Fiyat</string>
    <string name="yeni_urun_yeni_fiyat">Ürün Yeni Fiyat</string>
    <string name="yeni_urun_resmi">Ürün Resmi</string>
    <string name="activity_urun_resmi">Urun_Resmi</string>
    <string name="act_urun_isim">Ninja Ayakkabı</string>
    <string name="act_urun_aciklama">Tekstil Su Geçirmez membran ve destek süngeriyle desteklenmiş hava alır.</string>
    <string name="act_urun_eski_fiyat">249.99TL</string>
    <string name="act_urun_yeni_fiyat">149.99TL</string>
    <string name="internet_baslik">İnternet bağlantınız yok, lütfen internete bağlanın ve tekrar başlatın</string>
    <string name="internet_yok_resimi">İnternet yok resimi</string>
    <string name="maine_don">Uygulamayı kapat</string>
    <string name="hata_resmi">Hata Resmi</string>
    <string name="ters_giden_bir_seyler">Ters giden birşeyler oldu</string>
    <string name="tamam">Tamam</string>
    <string name="yanlis_mail">Yanlış paremetre girildi</string>
    <string name="bos_mail">Az çok diyelim boş geçmeyelim!</string>
    <string name="bos_sifre">Şifresiz giriş yapılamaz!</string>
    <string name="hatali_mail">Giriş yapılamadı</string>
    <string name="register_mail_hata">Email alanı boş bırakılamaz</string>
    <string name="register_sifre_hata">Şifre alanı hatası</string>
    <string name="register_sifre_ayni_hata">Şifreler uyuşmuyor</string>
    <string name="register_bos_alan">Boş alan bırakmayalım!</string>
    <string name="register_kayit_oldu">Kaydınız başarıyla oluşturuldu.</string>
    <string name="register_kayit_hata">Kaydınız oluşturulamadı.</string>
    <string name="urun_resim">Ürün Resmi - Resmin üzerine tıklayın!</string>
</resources>