<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/girisEkraniScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingTop="100dp"
        android:paddingEnd="20dp"
        android:paddingBottom="25dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/giris_ekran_konu"
            android:src="@drawable/girisekrani" />

        <LinearLayout
            android:id="@+id/ekranyazisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/girisekrani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giris_ekrani"
                android:textColor="#0B4C5F"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>


        <EditText
                android:id="@+id/editGirisAdi"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Kullanıcı Adı"
                android:hint="@string/giris_kullanici_adi"
                android:inputType="textEmailAddress"
                android:singleLine="true" />


        <EditText
            android:id="@+id/editGirisSifre"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="Şifre"
            android:hint="@string/giris_sifre"
            android:inputType="textPassword"
            android:singleLine="true" />


        <Button
            android:id="@+id/girisButon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/girisyapbutonkenarlik"
            android:layout_gravity="center_horizontal"
            android:hint="@string/giris_yap_butonhint"
            android:text="@string/giris_yapbuton"
            android:textAllCaps="false"
            android:textColor="@color/beyaz"
            android:textSize="18sp" />


            <TextView
                android:id="@+id/girisyadayazisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/ya_da"
                android:textColor="@color/siyah"
                android:textSize="16sp" />

        <Button
            android:id="@+id/girisKayiteGitButon"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/kayitolbutonkenarlik"
            android:text="@string/giris_kayit_ol"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />


    </LinearLayout>


</ScrollView>