<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/baslik_temizle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baslik_temizle_buton"
        android:clickable="true"
        android:focusable="true"
        android:textSize="16sp"
        android:textColor="#0040FF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#090a0e"
        android:textSize="18sp"
        android:text="@string/baslik_yeni_urun"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/baslik_kaydet_buton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginEnd="20dp"
        android:text="@string/baslik_kaydet"
        android:layout_gravity="end"/>
</androidx.appcompat.widget.Toolbar>