<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/act_urun_ust_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp">
            <ImageView
                android:id="@+id/urungerigit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrowleft_black"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/urun_geri_git" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urun_sayfa_baslik"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="#4a4a4a"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/act_urun_resim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/kenarliklar"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:contentDescription="@string/activity_urun_resmi"
            android:padding="16dp"
            android:src="@drawable/sleepbag" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/act_urun_isim"
            android:textColor="@color/siyah"
            android:textSize="25sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/act_urun_aciklama"
            android:textColor="@color/siyah"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="8dp"
                android:textColor="@color/siyah"
                android:textSize="16sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/ustucizili"
                android:foreground="@drawable/ustucizili"
                android:padding="8dp"
                android:text="@string/act_urun_eski_fiyat"
                android:textColor="@color/siyah"
                android:textSize="14sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/act_urun_yeni_fiyat"
                android:textColor="@color/siyah"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>