<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="100dp"
            android:paddingEnd="20dp"
            android:paddingBottom="25dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/kayit_ekran_ikon"
                android:src="@drawable/kayitekrani" />

            <LinearLayout
                android:id="@+id/kayitekranyazisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvSubname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kayit_ekrani"
                    android:textColor="@color/siyah"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/editKayitAdi"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/kayit_isim"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editKayitSoyadi"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/kayit_soyisim"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:autofillHints="" />

            </LinearLayout>

            <EditText
                android:id="@+id/editKayitMail"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/kayit_mail_adresi"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editKayitSifreBir"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/kayit_sifre"
                android:inputType="textPassword"
                android:singleLine="true"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editKayitSifreİki"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/kayit_sifre_onay"
                android:inputType="textPassword"
                android:singleLine="true"
                android:autofillHints="" />

            <Button
                android:id="@+id/kayitOlButon"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/kayitolbutonkenarlik"
                android:text="@string/giris_kayit_ol"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>