<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityNoNet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="8dp">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/beyaz"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_internet_on_the_go_bro"
                android:contentDescription="@string/internet_yok_resimi" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internet_baslik"
                android:textSize="22sp"
                android:textColor="@color/siyah"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
            <Button
                android:id="@+id/internet_buton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/maine_don"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>